third_party/move/tools/move-decompiler/tests/compiler-v2-test/lambda-spec/inline-lambda.exp
module 0x42::Test {
    fun call_inline(y: u64) {
        let _t1 = 3 + y;
        let _t2 = y;
        _t2 > 2;
        _t2 > _t1;
        y = _t2;
        while (_t1 > 0) y + 1;
        y > 5;
    }
    public fun test_apply(a1: u64, a2: u64) {
        0 != a1 + a2;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `u64`
  ┌─ inline-lambda.move:8:25
  │
8 │         while (_t1 > 0) y + 1;
  │                         ^^^^^
